--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Главная</title>
 </head>
 <body>
     <div class="top"></div>
@@ -23,5 +23,21 @@
       <iframe src="https://discordapp.com/widget?id=419505208461099012&theme=light" width="70%"  height="600px"  allowtransparency="true" frameborder="0"></iframe>
     </div>
     </center>
+
+    <h2>турниры</h2>
+
+    <a href="saerh">
+    <img src="./images/cs.jpg" alt="" class="tournamentscs1">
+    <img src="./images/cs2.jpg" alt="" class="tournamentscs2">
+    <img src="./images/cs3.jpg" alt="" class="tournamentscs3">
+    <img src="./images/cs4.jpg" alt="" class="tournamentscs4">
+</a>
+
+<a href="sahas">
+    <img src="./images/dbd1.jpg" alt="" class="tournamentsdbd1">
+    <img src="./images/dbd2.jpg" alt="" class="tournamentsdbd2">
+    <img src="./images/dbd3.jpg" alt="" class="tournamentsdbd3">
+    <img src="./images/dbd4.jpg" alt="" class="tournamentsdbd4">
+</a>
 </body>
 </html>
