--- a/rules.html
+++ b/rules.html
@@ -11,6 +11,7 @@
     <div class="top"></div>
     <ul class="menu-main">
         <li><a href="./index.html" >Главная</a></li>
+        <li><a href="./tournaments.html" >Турниры</a></li>
         <li><a href="#"class="current">Правила</a></li>
         <li><a href="./about.html">о сервере</a></li>
       </ul>
