--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="top"></div>
     <ul class="menu-main">
         <li><a href="#" class="current">Главная</a></li>
+        <li><a href="./tournaments.html" >Турниры</a></li>
         <li><a href="./rules.html">Правила</a></li>
         <li><a href="./about.html">о сервере</a></li>
       </ul>
@@ -23,21 +24,5 @@
       <iframe src="https://discordapp.com/widget?id=419505208461099012&theme=light" width="70%"  height="600px"  allowtransparency="true" frameborder="0"></iframe>
     </div>
     </center>
-
-    <h2>турниры</h2>
-
-    <a href="saerh">
-    <img src="./images/cs.jpg" alt="" class="tournamentscs1">
-    <img src="./images/cs2.jpg" alt="" class="tournamentscs2">
-    <img src="./images/cs3.jpg" alt="" class="tournamentscs3">
-    <img src="./images/cs4.jpg" alt="" class="tournamentscs4">
-</a>
-
-<a href="sahas">
-    <img src="./images/dbd1.jpg" alt="" class="tournamentsdbd1">
-    <img src="./images/dbd2.jpg" alt="" class="tournamentsdbd2">
-    <img src="./images/dbd3.jpg" alt="" class="tournamentsdbd3">
-    <img src="./images/dbd4.jpg" alt="" class="tournamentsdbd4">
-</a>
 </body>
 </html>
