добавил иконки и добавил boxshadow

--- a/rules.html
+++ b/rules.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <title>Правила</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="top"></div>
@@ -27,14 +28,14 @@
   -->
   <div class="ul">
     <ul class="push">
-        <li>Запрещены любые читы, за исключением читов разрешённые самой игрой(консоль)-нарушение карается 2 предупреждением, 3 предупреждения - бан</li>
+        <li>Запрещены любые читы, за исключением читов разрешённые самой игрой ( консоль ) - нарушение карается 2 предупреждением, 3 предупреждения - бан</li>
         <li>Участники должны быть старже 13 лет, если вы младше, то просьба по минимуму использовать микрофон - нарушение карается мутом на 5, 10, 15 минут</li>
         <li>Не спамить - нарушение карается 1 предупреждением, 3 предупреждения - бан</li>
         <li>Не рекламить другие беседы, любые другие рекламы согласовывать с модерами и админами   нарушение карается 1 предупреждением</li>
         <li>ПРАВИЛА ЧАТА:</li>
         <li class="podpush">     Запрещено жестокое оскорбление</li>
         <li class="podpush">     Запрещена расчленёнка </li>
-        <li class="podpush">     Запрещено проявление расизма, гомофобии и т.д. не в шуточной форме </li>
+        <li class="podpush">     Запрещено проявление расизма и т.д. не в шуточной форме </li>
         <li>КАЖДОЕ НАРУШЕНИЕ КАРАЕТСЯ 1 ПРЕДУПРЕЖДЕНИЕМ</li>
       </ul>
 </body>
