--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <title>Главная</title>
-</head>
+
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+    </head>
 <body>
     <div class="top"></div>
     <ul class="menu-main">
