добавил правила соревнований

--- a/tournaments.html
+++ b/tournaments.html
@@ -18,14 +18,14 @@
       </ul>
     <h2>турниры</h2>
 <center>
-    <a href="saerh">
+    <a href="./cs.html">
     <img src="./images/cs.jpg" alt="" class="tournamentscs1">
     <img src="./images/cs2.jpg" alt="" class="tournamentscs2">
     <img src="./images/cs3.jpg" alt="" class="tournamentscs3">
     <img src="./images/cs4.jpg" alt="" class="tournamentscs4">
 </a>
 
-<a href="sahas">
+<a href="./cs.html">
     <img src="./images/dbd1.jpg" alt="" class="tournamentsdbd1">
     <img src="./images/dbd2.jpg" alt="" class="tournamentsdbd2">
     <img src="./images/dbd3.jpg" alt="" class="tournamentsdbd3">
