--- a/about.html
+++ b/about.html
@@ -16,5 +16,21 @@
         <li><a href="./rules.html">Правила</a></li>
         <li><a href="#"class="current">о сервере</a></li>
       </ul>
+
+      <center>
+      <div class="about">
+           <p class="">
+            Этот сайт был сделан одним из админов дискорд сервера для облегчения 	пользования нашим сервером.
+            <br> Весь свод правил сервера можно найти в разделе «правила».
+            <br> Все турниры и их правила можно увидеть в разделе турниры, выбрав свою игру. 
+            <br> В разделе «Главная» можно увидеть всех пользователей, находящихся в сети, а также игры, в которые они играют. 
+            
+        </p>
+        
+      </div>
+      <h1 class="admins"> От лица админов желаю вам приятного времяпрепровождения.</h1>
+      </center>
+
+
 </body>
 </html
