--- a/tournaments.html
+++ b/tournaments.html
@@ -25,7 +25,7 @@
     <img src="./images/cs4.jpg" alt="" class="tournamentscs4">
 </a>
 
-<a href="./cs.html">
+<a href="./dbd.html">
     <img src="./images/dbd1.jpg" alt="" class="tournamentsdbd1">
     <img src="./images/dbd2.jpg" alt="" class="tournamentsdbd2">
     <img src="./images/dbd3.jpg" alt="" class="tournamentsdbd3">
