--- a/dbd.html
+++ b/dbd.html
@@ -88,7 +88,7 @@
     
      
     </div> -->
-    <center>
+    <!-- <center>
 
         <div class="dbdsections">
                 <p>РЕГИСТРАЦИЯ</p>
@@ -111,7 +111,15 @@
                     БАЛЛОВ
                 </p>
         </div>
-    </center>
+    </center> -->
+
+
+<center>
+    <a href="balance.html">
+        <button class="btn" >Баланс</button>
+    </a>
+</center>
+
 
 
 </body>
