начал делать баланс

--- a/cs.html
+++ b/cs.html
@@ -51,7 +51,7 @@
                 <!-- <div class="item-icon video"></div> -->
                 <div class="item-body">
                     <h3>Читы запрещены</h3>
-                    <p>Игра будет просматриваться админамиаа</p>
+                    <p>Игра будет просматриваться админами</p>
                 </div>
                 <div class="item-footer">
                     <a href="https://vk.com/d.sobolev1" class="link"><span>Помощь</span></a>
