--- a/dbd-solo.html
+++ b/dbd-solo.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/vicons-font.css">
-    <title>Dead by daylight</title>
+    <title>Dead by daylight - solo</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
-<body  class="dbdback" >
+<body  class="dbdback">
     <!-- <div class="top"></div> -->
     <ul class="menu-main">
         <li><a href="./index.html">Главная</a></li>
@@ -119,13 +119,9 @@
 
 
     <div class="box bg-3">
-            <a href="dbd-solo.html">
-            <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted">SOLO</button>
+        <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted">SOLO</button>
+        <!-- <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted">Team play</button> -->
         
-        </a>
-            <a href="dbd-team.html">
-         <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted" >  Team play</button>
-            </a>
     </div>
 
 
