--- a/dbd-team-balance.html
+++ b/dbd-team-balance.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/vicons-font.css">
+    
     <title>Dead by daylight</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
@@ -118,18 +119,76 @@
 
 
 
-    <div class="box bg-3">
-            <a href="dbd-solo.html">
-            <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted">SOLO</button>
-        
-        </a>
-            <a href="dbd-team.html">
-         <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted" >  Team play</button>
-            </a>
-    </div>
+
+<br>
+<center>
+<!-- <h2 class="maniac-h2">
+    TRAPPER
+</h2> -->
+<img src="maniacs/trapper.png" class="logoCharacter">
+<br>
+<br>
+
+<h2 class="blocked">
+    ЗАПРЕЩЕННЫЕ УЛУЧШЕНИЯ / ПЕРКИ / БИЛДЫ
+</h2>
 
 
 
 
+
+
+<table align: center valign="middle">
+
+<tr>
+
+    <td>  <img src="./trapper/smallGame.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> МЕЛКАЯ ДИЧЬ</span></td>
+
+</tr>
+
+
+
+<tr>
+
+    <td>  <img src="./trapper/ObjectOfObsession.png" alt="" width="70px">  </td>
+    <td> <span class="redBG">ОБЪЕКТ ОДЕРЖИМОСТИ</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/DetectivesHunch.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> ДЕТЕКТИВНОЕ ЧУТЬЁ</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/saboteur.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> КРУШИТЕЛЬ</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/smallGame.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> МЕЛКАЯ ДИЧЬ</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/smallGame.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> МЕЛКАЯ ДИЧЬ</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/smallGame.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> МЕЛКАЯ ДИЧЬ</span></td>
+
+</tr>
+
+</table>
+
+<hr style="border-top: 0.05vw solid rgba(74, 74, 74, 0)">
+</center>
 </body>
-</html
+</html 
