--- a/dbd-team.html
+++ b/dbd-team.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/vicons-font.css">
-    <title>Dead by daylight</title>
+    <title>Dead by daylight - team</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body  class="dbdback" >
@@ -119,12 +119,12 @@
 
 
     <div class="box bg-3">
-            <a href="dbd-solo.html">
-            <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted">SOLO</button>
+            <a href="dbd-team-balance.html">
+            <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted">баланс</button>
         
         </a>
-            <a href="dbd-team.html">
-         <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted" >  Team play</button>
+            <a href="#">
+         <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted" > СИСТЕМА БАЛЛОВ  </button>
             </a>
     </div>
 
