--- a/dbd-team-balance.html
+++ b/dbd-team-balance.html
@@ -169,26 +169,80 @@
 </tr>
 <tr>
 
-    <td>  <img src="./trapper/smallGame.png" alt="" width="70px">  </td>
-    <td> <span class="redBG"> МЕЛКАЯ ДИЧЬ</span></td>
+    <td>  <img src="./trapper/StakeOut.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> ВЫСЛЕЖИВАНИЕ ПОДОЗРЕВАЕМОГО</span></td>
 
 </tr>
 <tr>
 
-    <td>  <img src="./trapper/smallGame.png" alt="" width="70px">  </td>
-    <td> <span class="redBG"> МЕЛКАЯ ДИЧЬ</span></td>
+    <td>  <img src="./trapper/LeftBehind.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> ОСТАВЛЕННЫЙ ПОЗАДИ </span></td>
 
 </tr>
 <tr>
 
-    <td>  <img src="./trapper/smallGame.png" alt="" width="70px">  </td>
-    <td> <span class="redBG"> МЕЛКАЯ ДИЧЬ</span></td>
+    <td>  <img src="./trapper/leader.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> ЛИДЕР</span></td>
 
 </tr>
+<tr>
 
+    <td>  <img src="./trapper/proveThyself.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> ПРОЯВИ СЕБЯ</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/UpTheAnte.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> ПОВЫСИТЬ СТАВКИ</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/Autodidact.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> САМОУЧКА</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/DeadHard.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> КРЕПКИЙ ОРЕШЕК </span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/WakeUp.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> ПРОСНИСЬ</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/slipperyMeat.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> СКОЛЬЗКОЕ МЯСО</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/Deliverance.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> ОСВОБОЖДЕНИЕ</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/MettleOfMan.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> ПРОВЕРКА НА ПРОЧНОСТЬ</span></td>
+
+</tr>
+<tr>
+
+    <td>  <img src="./trapper/darkSense.png" alt="" width="70px">  </td>
+    <td> <span class="redBG"> ТЁМНОЕ ЧУВСТВО</span></td>
+
+</tr>
 </table>
 
 <hr style="border-top: 0.05vw solid rgba(74, 74, 74, 0)">
+
 </center>
 </body>
 </html 
